--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
