--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-firebase-hooks": "^5.1.1",
     "ethers": "^5.7.2",
     "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.2"
+    "recharts": "^2.12.2",
+    "qrcode.react": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
